Fixez overflow

--- a/src/app/calendar-base/calendar-base.component.scss
+++ b/src/app/calendar-base/calendar-base.component.scss
@@ -79,7 +79,6 @@
         height: auto;
         flex-wrap: wrap;
         color: $blue;
-        overflow: hidden;
 
         @include xs {
             width: 95%;
